fixed issue of header image overflowing aspect ratio container

--- a/web/app/themes/ppj/src/sass/components/header.sass
+++ b/web/app/themes/ppj/src/sass/components/header.sass
@@ -154,6 +154,7 @@
   &__img-ratio
     height: 0
     padding-bottom: 24.4rem // for small screens the image should stop scaling vertically
+    position: relative
 
     @include bp('portrait')
       padding-bottom: 38.88%
